V1.0.8
---------
 * Fixed dragging of inactive windows of multi-window apps under Wayland.
 * Fixed a miscalculation about setting menu-item height in a rare case.
 * Improved the workaround for Qt's hover bug in combo-boxes (especially under Wayland).
 * Workaround for Qt's hover bug in header views (especially under Wayland).
 * Support menu icons whose widths are greater than the small icon size.

V1.0.7
---------
 * Don't rely on the (undocumented) "Destroy" event to remove destroyed widgets from lists. In this way, the cause of a rare crash is removed.
 * Better guarantee for the lack of scrollbars in the config page of Kvantum Manager when it's visited for the first time.

V1.0.6
---------
 * Added a workaround for Kate's new status-bar and side-pane buttons, which still have wrong style codes.
 * Added some Qt6 parameters.
 * Silenced the compilation warnings with Qt 6.4.

V1.0.5
---------
 * Added a workaround for wrong app codes that don't give the required info to CT_MenuItem.
 * Added a workaround for wrong app codes that don't give the required space to tabbar scroll arrows.
 * Added a workaround for a new bug in Krita 5.1.0. A buggy code in the jungle of Krita's source causes a freeze when CT_ProgressBar gives a height greater than that of the contents size.
 * Added a condition for window dragging under Wayland, especially for dragging from buttons (the parent window is checked).
 * Simplified finding of Qt modules with cmake.

V1.0.4
---------
 * Added a workaround for Qt6's double click problem with window dragging.
 * Added a workaround for Qt6's window dragging when the cursor is outside the widget after the drag is finished (previously, its hover state would persist).
 * Don't start window dragging if a popup menu is shown and closed quickly (may happen very rarely).
 * Added 1px to button arrow margin.
 * Considered more details in drawing menu arrows of buttons (especially when QToolButton is null).