@@ -4,7 +4,8 @@ V1.0.8
  * Fixed a miscalculation about setting menu-item height in a rare case.
  * Improved the workaround for Qt's hover bug in combo-boxes (especially under Wayland).
  * Workaround for Qt's hover bug in header views (especially under Wayland).
- * Support menu icons whose widths are greater than the small icon size.
+ * Support combo menu icons whose widths are greater than the small icon size.
+ * Limited the extra vertical margins of menu-item icons to 1px.
 
 V1.0.7
 ---------
